manifests/service-c055.yml
apiVersion: v1
kind: Service
metadata:
    name: "avibcluster-c055"
    labels:
        app: "avibcluster-c055"
spec:
    type: ClusterIP
    ports:
    - port: 4040
      targetPort: 4040
      protocol: TCP
      name: http
    selector:
        app: "avibcluster-c055"
