manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "avibcluster-1b65"
    labels:
        app: "avibcluster-1b65"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: avib-clusterbfd5-avibcluster-1b65.107fdcdfc5624c01991c.eastus.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "avibcluster-1b65"
                servicePort: 4040
